<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/dialog_new_phone_no"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"

    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="40dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/dialog_phone_no_tooltip"/>

    <EditText
        android:id="@+id/dialog_new_phone_no_value"
        android:hint="@string/dialog_phone_enter_new_number_hint"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="4dp"
        android:inputType="phone"
        android:autofillHints="@string/new_patient_phone_number" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_new_phone_no_button"

            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"

            android:background="@drawable/button_dialog_confirm_new_phone_no"
            android:text="@string/dialog_button_submit"

             />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_new_phone_no_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_toRightOf="@+id/dialog_new_phone_no_button"
        android:layout_toEndOf="@+id/dialog_new_phone_no_button"

        android:background="@drawable/button_dialog_cancel_new_phone_no"
        android:text="@string/dialog_button_cancel"

        />

    </RelativeLayout>



</LinearLayout>