<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingBottom="40dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_new_session_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"

        android:textSize="20sp"
        android:text="@string/dialog_new_session_type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:id="@+id/dialog_new_session_type_choice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dialog_new_session_session_type_result"
        android:background="@drawable/border_text_box" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_new_session_notes_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"

        android:textSize="20sp"
        android:text="@string/dialog_new_session_notes_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dialog_new_session_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/dialog_new_session_notes"
        android:background="@drawable/border_text_box"

        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_new_session_submit"

            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"

            android:background="@drawable/button_dialog_confirm_new_phone_no"
            android:text="@string/dialog_button_submit"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_new_session_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_toRightOf="@+id/dialog_new_session_submit"
            android:layout_toEndOf="@+id/dialog_new_session_submit"

            android:background="@drawable/button_dialog_cancel_new_phone_no"
            android:text="@string/dialog_button_cancel"

            />

    </RelativeLayout>



</androidx.appcompat.widget.LinearLayoutCompat>