<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:background="@drawable/border_welcome_message">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/welcome_message"
            android:textSize="18sp"
            android:textColor="@color/black"

            android:text="@string/welcome_message" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:id="@+id/welcome_message_2"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/welcome_message_2" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">

        <!-- CardView for new patient details -->
        <androidx.cardview.widget.CardView
            android:id="@+id/new_patient_card"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:layout_width="380dp"
            android:layout_height="130dp"
            card_view:cardCornerRadius="4dp"
            android:paddingBottom="15dp"

            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">



            <!-- Free image sourced from -->
            <!-- https://www.pexels.com/photo/medical-stethoscope-with-red-paper-heart-on-white-surface-4386467/ -->
            <ImageView
                android:id="@id/new_patient_image"
                android:layout_width="190dp"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="start"
                android:src="@drawable/new_patient_image"
                android:background="@drawable/border_patient"
                android:contentDescription="@string/stethoscope_image"
                android:layout_marginStart="10dp" />

            <!-- patient title -->
            <TextView
                android:id="@+id/new_patient_title"
                android:layout_width="170dp"
                android:padding="4dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:gravity="center"

                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/new_patient_menu_title"/>

            <!-- Contains text alignment & content for new patient CardView description -->
            <TextView
                android:id="@+id/new_patient_details"
                android:padding="4dp"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="end"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"

                android:textAlignment="center"
                android:textSize="15sp"
                android:text="@string/new_patient_menu_details"/>

        </androidx.cardview.widget.CardView>




        <!-- CardView for new record details -->
        <androidx.cardview.widget.CardView
            android:id="@+id/all_records_card"
            android:layout_gravity="center"
            android:layout_width="380dp"
            android:layout_height="130dp"
            card_view:cardCornerRadius="4dp"
            android:layout_marginTop="15dp"

            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <!-- New Record image
            Free image sourced from:
            https://www.pexels.com/photo/mockup-of-white-clipboard-with-blank-paper-4226805/ -->
            <ImageView
                android:id="@+id/all_records_image"
                android:layout_width="190dp"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="start"
                android:src="@drawable/new_record_image"
                android:background="@drawable/border_patient"
                android:contentDescription="@string/stethoscope_image"
                android:layout_marginStart="10dp" />

            <!-- Contains text alignment & content for new record CardView title-->
            <TextView
                android:id="@+id/all_records_title"
                android:layout_width="170dp"
                android:padding="4dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:gravity="center"

                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/menu_all_records_title"/>

            <!-- Contains text alignment & content for new patient CardView description-->
            <TextView
                android:id="@+id/all_records_details"
                android:padding="4dp"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="end"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"

                android:textAlignment="center"
                android:textSize="15sp"
                android:text="@string/menu_all_records_details"/>

        </androidx.cardview.widget.CardView>

        <!-- CardView for new patient details -->
        <androidx.cardview.widget.CardView
            android:id="@+id/menu_all_patients_card"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="380dp"
            android:layout_height="130dp"
            card_view:cardCornerRadius="4dp"
            android:layout_marginBottom="15dp"

            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">



            <!-- Free image sourced from -->
            <!-- https://www.pexels.com/photo/medical-stethoscope-with-red-paper-heart-on-white-surface-4386467/ -->
            <ImageView
                android:id="@+id/menu_new_patient_image"
                android:layout_width="190dp"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="start"
                android:src="@drawable/icon_menu_people"
                android:background="@drawable/border_patient"
                android:contentDescription="@string/stethoscope_image"
                android:layout_marginStart="10dp" />

            <!-- patient title -->
            <TextView
                android:id="@+id/menu_all_patients_title"
                android:layout_width="170dp"
                android:padding="4dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:gravity="center"

                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/menu_all_patients_title"/>

            <!-- Contains text alignment & content for new patient CardView description -->
            <TextView
                android:id="@+id/menu_all_patients_details"
                android:padding="4dp"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_gravity="end"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"

                android:textAlignment="center"
                android:textSize="15sp"
                android:text="@string/menu_all_patients_details"/>

        </androidx.cardview.widget.CardView>







    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>